[gd_scene load_steps=11 format=3 uid="uid://btwabp43puvcl"]

[ext_resource type="Script" uid="uid://heh1cg62s6sq" path="res://Menus/main_menu.gd" id="1_glbon"]
[ext_resource type="Texture2D" uid="uid://ct3r7cu7omfc5" path="res://res/models/play.png" id="2_nlkkf"]
[ext_resource type="Texture2D" uid="uid://bw6nb2ipxobq5" path="res://res/models/records.png" id="3_qe12f"]
[ext_resource type="Texture2D" uid="uid://2fv2ghi37cbf" path="res://res/models/settings.png" id="4_8qtwp"]
[ext_resource type="Texture2D" uid="uid://dy0w1fd5jwbte" path="res://res/models/Eexit.png" id="5_dy7ct"]
[ext_resource type="PackedScene" uid="uid://b1m84i6njtbc6" path="res://BG/bg.tscn" id="6_vxn86"]
[ext_resource type="Script" uid="uid://b8d71tudvm7rg" path="res://Menus/label.gd" id="7_gn11b"]
[ext_resource type="Texture2D" uid="uid://dmn8pdi6so1y1" path="res://res/models/continue game.png" id="8_2k0p2"]
[ext_resource type="AudioStream" uid="uid://dlfylhxyqsmum" path="res://res/sounds/для трейлера.mp3" id="9_y501u"]
[ext_resource type="AudioStream" uid="uid://r75us63e0scm" path="res://res/sounds/perehodmm.mp3" id="10_uayf2"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_glbon")

[node name="return" type="Button" parent="."]
offset_left = 846.0
offset_top = 361.0
offset_right = 1163.0
offset_bottom = 418.0
size_flags_horizontal = 4

[node name="Records" type="Button" parent="."]
offset_left = 896.0
offset_top = 464.0
offset_right = 1109.0
offset_bottom = 524.0

[node name="Exit" type="Button" parent="."]
offset_left = 945.0
offset_top = 681.0
offset_right = 1066.0
offset_bottom = 741.0
size_flags_horizontal = 4

[node name="Play" type="Button" parent="."]
offset_left = 933.0
offset_top = 257.0
offset_right = 1069.0
offset_bottom = 321.0
size_flags_horizontal = 4

[node name="Settings" type="Button" parent="."]
offset_left = 898.0
offset_top = 566.0
offset_right = 1109.0
offset_bottom = 627.0

[node name="BG" parent="." instance=ExtResource("6_vxn86")]

[node name="Play2" type="Sprite2D" parent="."]
position = Vector2(993.5, 278.75)
scale = Vector2(1.275, 1.555)
texture = ExtResource("2_nlkkf")

[node name="Records2" type="Sprite2D" parent="."]
position = Vector2(1008, 484.25)
scale = Vector2(1.268, 1.43)
texture = ExtResource("3_qe12f")

[node name="Settings2" type="Sprite2D" parent="."]
position = Vector2(999.163, 585.75)
scale = Vector2(1.1303, 1.5)
texture = ExtResource("4_8qtwp")

[node name="Eexit" type="Sprite2D" parent="."]
position = Vector2(1016.51, 700.75)
scale = Vector2(1.17526, 1.47)
texture = ExtResource("5_dy7ct")

[node name="game enter" type="Label" parent="."]
visible = false
offset_left = 4.0
offset_top = 6.0
offset_right = 358.0
offset_bottom = 201.0
text = "заходов в игру :"
script = ExtResource("7_gn11b")

[node name="ContinueGame" type="Sprite2D" parent="."]
position = Vector2(1005.5, 390.75)
scale = Vector2(1.09, 1.33)
texture = ExtResource("8_2k0p2")

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_y501u")
volume_db = -27.0
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_uayf2")

[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Records" to="." method="_on_records_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
